--- a/BugTracker.Web/Views/Issue/CreateIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/CreateIssue.cshtml
@@ -1,4 +1,5 @@
-﻿@model BugTracker.Models.ViewModels.Issue.CreateIssueViewModel
+﻿@using BugTracker.Web.ViewModels.Issue
+@model CreateIssueViewModel
 @{
     ViewBag.Title = "Create new issue";
 }
