--- a/BugTracker.Web/Views/Issue/DetailIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/DetailIssue.cshtml
@@ -1,4 +1,5 @@
-﻿@model BugTracker.Models.ViewModels.Issue.IssueDetailsViewModel
+﻿@using BugTracker.Web.ViewModels.Issue
+@model IssueDetailsViewModel
 @{
     ViewBag.Title = $"Details of issue #{Model.Id}";
 }
