--- a/BugTracker.Web/Views/Issue/EditIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/EditIssue.cshtml
@@ -1,4 +1,5 @@
-﻿@model BugTracker.Models.ViewModels.Issue.EditIssueViewModel
+﻿@using BugTracker.Web.ViewModels.Issue
+@model EditIssueViewModel
 @{
     ViewBag.Title = $"Edit issue #{Model.Id}";
     ViewBag.TId = Model.Id;
