--- a/BugTracker.Web/Views/Issue/Index.cshtml
+++ b/BugTracker.Web/Views/Issue/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<BugTracker.Models.ViewModels.Issue.IssueViewModel>
+﻿@using BugTracker.Web.ViewModels.Issue
+@model List<IssueViewModel>
 
 @{
     ViewData["Title"] = "Issues";
