--- a/BugTracker.Web/Views/Shared/Error.cshtml
+++ b/BugTracker.Web/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model BugTracker.Models.ViewModels.ErrorViewModel
+﻿@using BugTracker.Web.ViewModels
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
