--- a/BugTracker.Web/Areas/Identity/Pages/_LoginPartial.cshtml
+++ b/BugTracker.Web/Areas/Identity/Pages/_LoginPartial.cshtml
@@ -1,29 +1,58 @@
-@using BugTracker.Data.Models
-
+﻿@using BugTracker.Data.Models
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
+@{
+  // Lấy user một cách async + null‐safe
+  var currentUser = await UserManager.GetUserAsync(User);
+  // Fallback ra chuỗi rỗng nếu null
+  var loginName = currentUser?.Login ?? User.Identity?.Name ?? "";
+  // Tạo returnUrl trước để tránh vấn đề quote
+  var returnUrl = Url.Action("Index", "Issue", new { area = "" });
+}
 
 <ul class="navbar-nav">
-    @if (SignInManager.IsSignedIn(User))
-    {
-        <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                <i class="fa-solid fa-user"></i> @UserManager.GetUserAsync(User).Result.Login
-            </a>
-        </li>
-        <li class="nav-item">
-            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Issue", new {area = ""})">
-                <button id="logout" type="submit" class="nav-link btn btn-link btn-"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</button>
-            </form>
-        </li>
-    }
-    else
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Sign Up</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Sign In</a>
-        </li>
-    }
+  @if (SignInManager.IsSignedIn(User))
+  {
+    <li class="nav-item">
+      <a id="manage"
+         class="nav-link text-dark"
+         asp-area="Identity"
+         asp-page="/Account/Manage/Index"
+         title="Manage">
+        <i class="fa-solid fa-user"></i> @loginName
+      </a>
+    </li>
+    <li class="nav-item">
+      <form id="logoutForm" class="form-inline"
+            asp-area="Identity"
+            asp-page="/Account/Logout"
+            asp-route-returnUrl="@returnUrl">
+        <button id="logout"
+                type="submit"
+                class="nav-link btn btn-link">
+          <i class="fa-solid fa-arrow-right-from-bracket"></i>
+          Logout
+        </button>
+      </form>
+    </li>
+  }
+  else
+  {
+    <li class="nav-item">
+      <a class="nav-link text-dark"
+         id="register"
+         asp-area="Identity"
+         asp-page="/Account/Register">
+        Sign Up
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-dark"
+         id="login"
+         asp-area="Identity"
+         asp-page="/Account/Login">
+        Sign In
+      </a>
+    </li>
+  }
 </ul>
