--- a/BugTracker.Web/Views/Issue/EditIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/EditIssue.cshtml
@@ -21,7 +21,7 @@
                             <td>
                                 <div>
                                     @Html.LabelFor(Model => Model.AssignedToId, "Assignee:")
-                                    @Html.DropDownListFor(Model => Model.AssignedToId, new SelectList(Model.Users, "Id", "Login"),
+                                    @Html.DropDownListFor(Model => Model.AssignedToId, new SelectList(Model.Users, "Id", "UserName"),
                                         "-Select assignee-",
                                         new {@class = "form-control"})
                                 </div>
