--- a/BugTracker.Web/Views/Issue/Index.cshtml
+++ b/BugTracker.Web/Views/Issue/Index.cshtml
@@ -99,6 +99,18 @@
             @issue.Status
           </span>
         </td>
+        <td class="text-center">
+          <a asp-controller="Issue" asp-action="DetailIssue" asp-route-issueId="@issue.Id" class="btn btn-sm btn-info" title="View">
+            <i class="fas fa-eye"></i>
+          </a>
+          <a asp-controller="Issue" asp-action="EditIssue" asp-route-issueId="@issue.Id" class="btn btn-sm btn-primary" title="Edit">
+            <i class="fas fa-edit"></i>
+          </a>
+          <a asp-controller="Issue" asp-action="DeleteIssue" asp-route-issueId="@issue.Id" class="btn btn-sm btn-danger" title="Delete"
+            onclick="return confirm('Are you sure you want to delete this issue?');">
+            <i class="fas fa-trash"></i>
+          </a>
+        </td>
       </tr>
     }
   </tbody>
