--- a/BugTracker.Web/Views/Issue/CreateIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/CreateIssue.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BugTracker.Web.ViewModels.Issue
 @model CreateIssueViewModel
+
 @{
   ViewBag.Title = "Create new issue";
 }
@@ -10,45 +11,55 @@
   </div>
   <div class="card shadow mb-4">
     <div class="card-body">
-      <div class="table-responsive">
-        <form method="post" enctype="multipart/form-data">
-          <table class="table table-bordered display-5">
+      <form method="post" enctype="multipart/form-data">
+        <div class="table-responsive mb-3">
+          <table class="table table-bordered">
             <thead>
               <tr>
                 <td>
-                  <div>
-                    @Html.LabelFor(Model => Model.AssignedToId, "Assignee:")
-                    @Html.DropDownListFor(Model => Model.AssignedToId, new SelectList(Model.Users, "Id", "UserName"), "-Select assignee-", new { @class = "form-control" })
+                  <div class="mb-3">
+                    @Html.LabelFor(m => m.AssignedToId)
+                    @Html.DropDownListFor(
+                           m => m.AssignedToId,
+                           new SelectList(Model.Users, "Id", "UserName", Model.AssignedToId),
+                           "- Select assignee -",
+                           new { @class = "form-control" }
+                           )
+                    <span class="text-danger">@Html.ValidationMessageFor(m => m.AssignedToId)</span>
                   </div>
-                  <div class="text-danger"> @Html.ValidationMessageFor(Model => Model.Users)</div>
-
-                  <div>
-                    @Html.LabelFor(Model => Model.Title, "Title:")
-                    @Html.TextBoxFor(Model => Model.Title, new { @class = "form-control", placeholder = "Type issue name..." })
+                  <div class="mb-3">
+                    @Html.LabelFor(m => m.Title)
+                    @Html.TextBoxFor(
+                           m => m.Title,
+                           new { @class = "form-control", placeholder = "Type issue name..." }
+                           )
+                    <span class="text-danger">@Html.ValidationMessageFor(m => m.Title)</span>
                   </div>
-                  <div class="text-danger"> @Html.ValidationMessageFor(Model => Model.Title)</div>
-
-                  <div>
-                    @Html.LabelFor(Model => Model.Description, "Description:")
-                    @Html.TextAreaFor(Model => Model.Description, new { @class = "form-control  ", placeholder = "Type issue description..." })
+                  <div class="mb-3">
+                    <input type="hidden" asp-for="Description" id="Description" />
+                    <div id="quillEditor" style="height:200px;">
+                     @Html.Raw(Model.Description)
+                    </div>
+                    <div class="text-danger">@Html.ValidationMessageFor(m => m.Description)</div>
                   </div>
-                  <div class="text-danger"> @Html.ValidationMessageFor(Model => Model.Description) </div>
-
-                  <div>
-                    @Html.LabelFor(Model => Model.PriorityId, "Priority:")
-                    @Html.DropDownListFor(Model => Model.PriorityId, new SelectList(Model.Priorities, "Id", "Name"),
-                           "-Select a priority-",
-                           new { @class = "form-control" })
+                  <div class="mb-3">
+                    @Html.LabelFor(m => m.PriorityId)
+                    @Html.DropDownListFor(
+                           m => m.PriorityId,
+                           new SelectList(Model.Priorities, "Id", "Name", Model.PriorityId),
+                           "- Select a priority -",
+                           new { @class = "form-control" }
+                           )
+                    <span class="text-danger">@Html.ValidationMessageFor(m => m.PriorityId)</span>
                   </div>
-                  <div class="text-danger"> @Html.ValidationMessageFor(Model => Model.PriorityId) </div>
                 </td>
               </tr>
             </thead>
           </table>
-          <button type="submit" class="btn btn-success">Create issue</button>&nbsp;
-          <a class="btn btn-primary" href="@Url.Action("Index", "Issue")" role="button">Back</a>
-        </form>
-      </div>
+        </div>
+        <button type="submit" class="btn btn-success">Create issue</button>
+        <a asp-action="Index" asp-controller="Issue" class="btn btn-secondary ms-2">Back</a>
+      </form>
     </div>
   </div>
 </div>
@@ -57,4 +68,17 @@
   @{
     await Html.RenderPartialAsync("_ValidationScriptsPartial");
   }
+
+  <script>
+    var quill = new Quill('#quillEditor', {
+      theme: 'snow',
+      placeholder: 'Type issue description…'
+    });
+    var descInput = document.querySelector('input[name="Description"]');
+
+    quill.on('text-change', function(delta, oldDelta, source) {
+      descInput.value = quill.root.innerHTML;
+    });
+    descInput.value = quill.root.innerHTML;
+  </script>
 }
