--- a/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
   </footer>
 
   <!-- Bootstrap JS bundle -->
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
   @await RenderSectionAsync("Scripts", required: false)
