Add automation tests

--- a/BugTracker.Web/Views/Issue/CreateIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/CreateIssue.cshtml
@@ -62,7 +62,7 @@
             </thead>
           </table>
         </div>
-        <button type="submit" class="btn btn-success">Create issue</button>
+        <button id="create-issue-button" type="submit" class="btn btn-success">Create issue</button>
         <a asp-action="Index" asp-controller="Issue" class="btn btn-secondary ms-2">Back</a>
       </form>
     </div>
