Add full E2ETest

--- a/BugTracker.Web/Views/Issue/EditIssue.cshtml
+++ b/BugTracker.Web/Views/Issue/EditIssue.cshtml
@@ -63,7 +63,7 @@
             </thead>
           </table>
         </div>
-        <button type="submit" class="btn btn-success">Save changes</button>
+        <button id="save-issue-button" type="submit" class="btn btn-success">Save changes</button>
         <a asp-action="Index" asp-controller="Issue" class="btn btn-secondary ms-2">Back</a>
         <a asp-action="DeleteIssue" asp-controller="Issue" asp-route-issueId="@Model.Id"
            class="btn btn-danger ms-2"
